tests/res/trycatch/throw_in_try_finally.say
try {
    throw "error";
} finally { // error: Uncaught exception: "error"
    print("finally"); // expect: finally
}